make sure long links wrap

--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -21,6 +21,13 @@ a {
   color: $primary-color;
   transition: color 0.35s;
   text-decoration: none;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
 
   &:hover {
     color: $lightest-color;
